// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser postfix unary expressions allows '++' at the end of a function 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [
          Increment {
            "token": {
              "isReserved": false,
              "kind": "PlusPlus",
              "literal": undefined,
              "location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "++",
            },
            "value": Variable {
              "name": {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "someValue",
              },
            },
          },
        ],
      },
      "end": {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": [],
      "returns": 11,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "foo",
    },
  },
]
`;

exports[`parser postfix unary expressions parses postfix '++' for indexed get expressions 1`] = `
[
  Increment {
    "token": {
      "isReserved": false,
      "kind": "PlusPlus",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "++",
    },
    "value": IndexedGet {
      "closingSquare": {
        "isReserved": false,
        "kind": "RightSquare",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "]",
      },
      "indexes": [
        Variable {
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "property",
          },
        },
      ],
      "obj": Variable {
        "name": {
          "isReserved": false,
          "kind": "Identifier",
          "literal": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "text": "obj",
        },
      },
      "optional": false,
    },
  },
]
`;

exports[`parser postfix unary expressions parses postfix '++' for variables 1`] = `
[
  Increment {
    "token": {
      "isReserved": false,
      "kind": "PlusPlus",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "++",
    },
    "value": Variable {
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "foo",
      },
    },
  },
]
`;

exports[`parser postfix unary expressions parses postfix '--' for dotted get expressions 1`] = `
[
  Increment {
    "token": {
      "isReserved": false,
      "kind": "MinusMinus",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "--",
    },
    "value": DottedGet {
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "property",
      },
      "obj": Variable {
        "name": {
          "isReserved": false,
          "kind": "Identifier",
          "literal": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "text": "obj",
        },
      },
      "optional": false,
    },
  },
]
`;
